chainsight-cdk-macros/src/indexers/snapshots/chainsight_cdk_macros__indexers__sources__test__snapshot__algorithm_indexer_source.snap
---
source: chainsight-cdk-macros/src/indexers/sources.rs
expression: formatted
---
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_sources() -> Vec<chainsight_cdk::core::Sources<std::collections::HashMap<String, String>>> {
    vec![chainsight_cdk::core::Sources::<
        std::collections::HashMap<String, String>,
    >::new_algorithm_indexer(
        get_target_addr(),
        get_indexing_interval(),
    )]
}

