chainsight-cdk-macros/src/indexers/snapshots/chainsight_cdk_macros__indexers__sources__test__snapshot__snapshot_indexer_icp_source.snap
---
source: chainsight-cdk-macros/src/indexers/sources.rs
expression: formatted
---
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_sources(
) -> Vec<chainsight_cdk::core::Sources<chainsight_cdk::core::ICSnapshotIndexerSourceAttrs>> {
    vec![chainsight_cdk::core::Sources::<
        chainsight_cdk::core::ICSnapshotIndexerSourceAttrs,
    >::new_snapshot_indexer(
        get_target_canister(),
        get_indexing_interval(),
        "icrc1_balance_of".to_string(),
    )]
}

