chainsight-cdk-macros/src/indexers/snapshots/chainsight_cdk_macros__indexers__sources__test__snapshot__web3_event_indexer_source.snap
---
source: chainsight-cdk-macros/src/indexers/sources.rs
expression: formatted
---
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_sources(
) -> Vec<chainsight_cdk::core::Sources<chainsight_cdk::core::Web3EventIndexerSourceAttrs>> {
    vec![chainsight_cdk::core::Sources::<
        chainsight_cdk::core::Web3EventIndexerSourceAttrs,
    >::new_event_indexer(
        get_target_addr(),
        get_indexing_interval(),
        chainsight_cdk::core::Web3EventIndexerSourceAttrs {
            chain_id: get_web3_ctx_param().chain_id,
            event_name: "Transfer".to_string(),
        },
    )]
}

